# piriquitOS

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.inc  README  README.md  README.rst  SUMMARY.md  agent.cmd  autogen.sh  build.ninja  cmake_install.cmake  cmakelists.txt  configure  configure.ac  configure~  docker-compose.yml  dockerfile  fgos  fgos-env.cmd  fgos-env.sh  kernel.cpp  linker.ld  linux-deps-original.sh  linux-deps.sh  linux-env.sh  linux-image.sh  loader.s  (+5 more)
.github/workflows/: Build.yml  PublishDockerImage.yml  auto-assign.yml  build.yml  codacy-analysis.yml  codacy.yml  docker-image.yml  docker-publish-github.yml  docker-publish.yml  makefile.yml
bootloader/: bootloader.x
bootloader/src/: bootloader.asm  bootloader.cpp  graphical.asm  main.asm
commands/: bin-gen.cmd  linux-gen.sh  win-gen.cmd
docs/: build.rst  compile.rst  dockerimage-build.rst  dockerimage-push.rst  setup.rst
isodir/boot/grub/: grub.cfg
kernel/: boot.asm  boot.s  fgOS.iso  grub.cfg  kernel.c  kernel.c++  kernel.h  keyboard.c++  linker.id  run.sh
kernel/arch/x86-64/: console.cpp  tty.cpp  vga.hpp
kernel/arch/x86-64/bootloader/: header.asm
kernel/arch/x86-64/kernel/: arch.s  ata.cpp  common.s  vga.cpp
kernel/include/kernel/: terminal.hpp
kernel/kernel/: kernel.cpp  vga.cpp
m4/: mkrescue.m4  nasm.m4
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  boot.s  cmake_install.cmake  gdt.cpp  header.asm  kernel.c  kernel.cpp  linker.ld  loader.s  main.asm  main64.asm  print.c
src/aarch64/: build.sh  kernel.c  linker.ld
src/arch/amd64/: Makefile.am  boot.asm  linker.ld
src/arch/amd64/kernel/: kernel.cpp  string.cpp  vga.cpp
src/arch/amd64/kernel/include/: types.hpp
src/arch/amd64/kernel/include/drivers/: vga.hpp
src/arch/i386/: boot.asm  boot.c  kernel.c  linker.ld  multiboot.h  types.h
src/arch/i386/isodir/boot/grub/: grub.cfg
src/arch/i386/kernel/: acpi.c  console.c  exceptions.asm  gdt.asm  gdt.c  idt.c  io.c  irq.asm  isr.c  kernel.c  madt.c
src/arch/i386/kernel/drivers/: ata.c  cmos.c  fpu.c  keyboard.c  pic.c  pit.c  vga.c
src/arch/i386/kernel/include/: acpi.h  console.h  gdt.h  idt.h  io.h  isr.h  kernel.h  madt.h
src/arch/i386/kernel/include/drivers/: ata.h  cmos.h  fpu.h  keyboard.h  pic.h  pit.h  vga.h
src/arch/i386/kernel/include/libc/: abort.c  puts.c  stdio.c  string.c
src/arch/i386/kernel/include/libc/include/: defines.h  stdarg.h  stdio.h  stdlib.h  string.h  types.h
src/boot/: header.asm
src/bootloader/: .gitignore  Dockerfile  README.md  bootstrap.asm  gdt.asm  main64.asm  mbr.asm
src/bootloader/src/: bootloader.asm
src/common/: defines.h
src/common/libc/: operators.cpp  stdlib.cpp  string.cpp
src/common/libc/include/: memory.h  stdlib.h  string.h
src/include/: cstdint.h  gdt.h  kernel.h  print.h  string.hpp  terminal.hpp  types.h  vga.hpp
src/kernel/: Makefile  README.md  acpi.cpp  arch.cpp  arch.s  ata.cpp  gdt.cpp  interrupts.cpp  irqs.s  isrs.s  kernel.c  kernel.cpp  main.asm  main64.asm  print.c  string.cpp  terminal.cpp  vga.cpp
src/kernel/include/: disks.hpp  fg.hpp  gdt.hpp  gdt_types.hpp  interrupts.hpp  isrs.hpp  memory.hpp  paging.hpp  rtc.hpp  string.hpp  sysinfo.hpp  types.hpp
src/kernel/include/driver/: acpi.hpp
src/kernel/include/drivers/: ata.hpp  keyboard.hpp  vga.hpp
src/kernel/include/memory/: malloc.hpp
src/kernel/include/stl/: array.hpp  enable_if.hpp  pair.hpp  string.hpp  types.hpp  unique_ptr.hpp  vector.hpp
src/kernel/include/utils/: kernel.hpp
src/kernel/src/: kernel.cpp  terminal.cpp
src/kernel/stl/: string.cpp
src/libs/: cstdint.h  stdint.h
src/riscv/: build.sh  kernel.c  linker.ld  main.S
src/x86_64/boot/: main.asm
targets/x86_64/: linker.ld
utils/: fgos-env.go  hub.cmd  linux-deps.sh  linux-push.sh  server.go  upsource.cmd  win-env.cmd  win-image.cmd  win-push.cmd
(+27 files in other folders)
