AC_PREREQ([2.69])
AC_INIT([fgOS], [1.0], [https://github.com/fgsoftware1/fgOS/issues])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_HEADERS([src/include/*])
AC_CHECK_HEADERS([src/include/*])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT(Makefile src/Makefile)
